// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxFontSize renders 0 1`] = `
Array [
  .c0 {
  max-font-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: 0;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders function 1`] = `
Array [
  .c0 {
  max-font-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: has;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders invalid theme path 1`] = `
Array [
  .c0 {
  max-font-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders negative number 1`] = `
Array [
  .c0 {
  max-font-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  max-font-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: July;
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    max-font-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    max-font-size: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    max-font-size: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    max-font-size: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  max-font-size: July;
}

@media May {
  .c0 {
    max-font-size: August;
  }
}

@media April {
  .c0 {
    max-font-size: September;
  }
}

@media January {
  .c0 {
    max-font-size: November;
  }
}

@media April {
  .c0 {
    max-font-size: August;
  }
}

@media June {
  .c0 {
    max-font-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: July;
}

@media May {
  .c0 {
    max-font-size: August;
  }
}

@media April {
  .c0 {
    max-font-size: September;
  }
}

@media January {
  .c0 {
    max-font-size: November;
  }
}

@media April {
  .c0 {
    max-font-size: August;
  }
}

@media June {
  .c0 {
    max-font-size: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-font-size: November;
  }
}

@media April {
  .c0 {
    max-font-size: January;
  }
}

@media January {
  .c0 {
    max-font-size: December;
  }
}

@media April {
  .c0 {
    max-font-size: April;
  }
}

@media June {
  .c0 {
    max-font-size: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-font-size: November;
  }
}

@media April {
  .c0 {
    max-font-size: January;
  }
}

@media January {
  .c0 {
    max-font-size: December;
  }
}

@media April {
  .c0 {
    max-font-size: April;
  }
}

@media June {
  .c0 {
    max-font-size: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    max-font-size: July;
  }
}

@media April {
  .c0 {
    max-font-size: August;
  }
}

@media January {
  .c0 {
    max-font-size: September;
  }
}

@media April {
  .c0 {
    max-font-size: November;
  }
}

@media June {
  .c0 {
    max-font-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    max-font-size: July;
  }
}

@media April {
  .c0 {
    max-font-size: August;
  }
}

@media January {
  .c0 {
    max-font-size: September;
  }
}

@media April {
  .c0 {
    max-font-size: November;
  }
}

@media June {
  .c0 {
    max-font-size: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-font-size: January;
  }
}

@media April {
  .c0 {
    max-font-size: December;
  }
}

@media January {
  .c0 {
    max-font-size: April;
  }
}

@media April {
  .c0 {
    max-font-size: May;
  }
}

@media June {
  .c0 {
    max-font-size: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    max-font-size: January;
  }
}

@media April {
  .c0 {
    max-font-size: December;
  }
}

@media January {
  .c0 {
    max-font-size: April;
  }
}

@media April {
  .c0 {
    max-font-size: May;
  }
}

@media June {
  .c0 {
    max-font-size: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders postitive number 1`] = `
Array [
  .c0 {
  max-font-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders string 1`] = `
Array [
  .c0 {
  max-font-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: July;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: June;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maxFontSize renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maxFontSize renders valid theme path 1`] = `
Array [
  .c0 {
  max-font-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  max-font-size: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
